# activetigger

./: .gitignore  DEPLOY.md  LICENSE  MANIFEST.in  README.md  access.md  config.yaml  dataset_test.csv  index.html  index.md  mkdocs.yml  pyproject.toml  pytest.ini  report.html  requirements.txt  setup.py  test.ipynb
.github/workflows/: build-doc.yml  build-react-app.yml  check-main.yml  lint_api.yml  lint_api.yml-paused  lint_api.yml.disabled
activetigger/: __init__.py  __main__.py  activetigger.py  api.py  database.py  datamodels.py  frontend.py  functions.py  models.py  project.py  project_fastapi.py  pylabel.py  server.py  server_fastapi.py  widget.py  widget_api.py
api/: .env.sample  alembic.ini  bert_models.csv  config.yaml.sample  init.sh  pyproject.toml  requirements.txt
api/activetigger/: __init__.py  __main__.py  api.py  bertopic.py  bertopic_manager.py  config.py  data.py  datamodels.py  db.py  features.py  frontend_deprecated.py  functions.py  generations.py  languagemodels.py  messages.py  models.py  monitoring.py  orchestrator.py  project.py  projections.py  queue.py  queue_manager.py  quickmodels.py  schemes.py  server.py  simplemodels.py  users.py  widget.py
api/activetigger/api/: __init__.py  client.py
api/activetigger/app/: dependencies.py  main.py
api/activetigger/app/routers/: annotations.py  bertopic.py  export.py  features.py  files.py  generation.py  messages.py  models.py  monitoring.py  projects.py  schemes.py  users.py
api/activetigger/db/: __init__.py  generations.py  languagemodels.py  logs.py  manager.py  messages.py  models.py  monitoring.py  projects.py  users.py
api/activetigger/generation/: client.py  generations.py  huggingface.py  ilaas.py  ollama.py  openai.py  openapi.py  openrouter.py
api/activetigger/html/: bertopic_report_template.html  welcome.html
api/activetigger/tasks/: RefactorRules.md  TaskTimer.py  base_task.py  compute_bertopic.py  compute_dfm.py  compute_fasttext.py  compute_projection.py  compute_sbert.py  create_project.py  empty_task.py  fit_model.py  generate_call.py  predict_bert.py  predict_ml.py  train_bert.py  train_bert_xp.py  train_ml.py  update_datasets.py  utils.py
api/migrations/: README  env.py
api/migrations/versions/: 85067581bdbd_generation_models.py  938383c31205_baseline.py  e9c6a551b6fa_what_change_in_this_revision.py
api/tests/: test_api.py  test_functions.py  test_project.py  test_projects.py  test_server.py
assets/: index-0TBz4Y3k.js  index-26PSwEX0.js  index-2XasAqWX.js  index-2eOQp-rF.js  index-2nCE4vIM.css  index-7IUuwzza.js  index-84BEyEv1.js  index-8q-Z5J_I.css  index-917xg5Fk.css  index-9YAuLbbJ.js  index-A07n-s3Z.css  index-APV1LS3p.js  index-B-AF8PHJ.js  index-B1xUKd_3.css  index-B4ESDy3a.js  index-B5X_YV6n.js  index-B5fEcIL-.js  index-B5fSxGEz.js  index-B7mRVbbA.js  index-B8eH92Z4.js  index-B9Xlzmfb.js  index-BASGNPPh.js  index-BApkZ9ON.js  index-BAzjt5Sz.js  index-BDfEnQcI.js  index-BInn8Y7h.css  index-BJ1Ncg0j.js  index-BJiok7_e.css  index-BK2BQ92y.js  index-BQ0S-NwW.js  index-BQWffjj3.js  index-BRDXB_nw.js  index-BSRNKKIY.js  index-BSVH7u7U.js  index-BTapBGBe.js  index-BUAENWXP.js  index-BUvvGhYG.js  index-BVSl7GPE.js  index-BVfxJ6QS.js  index-BWZ7jCbz.js  (+211 more)
doc/: Betatest.md  description.md
docker/: .env  docker-compose.dev.yml  docker-compose.nvidia.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  nginx.dev.conf  nginx.prod.conf  nginx.prod_template.conf  template_start_nginx_prod.sh
docker/api/: Dockerfile  embeddings.yaml  entrypoint.sh
docker/frontend/: entrypoint.sh
docs/: 404.html  Environnemental impacts of Active Tigger.md  access.md  contributors.md  description.md  documentation.md  environment.md  faq.md  index.html  index.md  quickstart.md  search.html  software.md  usecases.md
docs/access/: index.html
docs/contributors/: index.html
docs/description/: index.html
docs/documentation/: index.html
docs/environment/: index.html
docs/faq/: index.html
docs/quickstart/: index.html
docs/search/: search_index.json
docs/software/: index.html
docs/usecases/: index.html
frontend/: .env  .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.app.json  tsconfig.base.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: ActiveLearningManagement.tsx  AnnotationDisagreementManagement.tsx  AnnotationManagement.tsx  AnnotationMode.tsx  BackButton.tsx  BertModelManagement.tsx  ButtonNewFeature.tsx  CodeBookDisplay.tsx  CodeBookManagement.tsx  Confettis.tsx  CreateNewFeature.tsx  CurrentProjectMonitoring.tsx  CurrentProjectState.tsx  DataTabular.tsx  DisplayMatrix.tsx  DisplayScores.tsx  DisplayScoresMenu.tsx  DisplayTableStatistics.tsx  DisplayTableStatisticsReact.tsx  DisplayTableTopics.tsx  DisplayTrainingProcesses.tsx  DocPage.tsx  FeaturesManagement.tsx  FilesManagement.tsx  ForwardButton.tsx  GenPage.tsx  HelpPage.tsx  HomePage.tsx  Icons.tsx  ImportAnnotations.tsx  LabelsManagement.tsx  LoginPage.tsx  ManageFiles.tsx  ManageMessages.tsx  ModalError.tsx  ModelEvaluation.tsx  ModelManagement.tsx  ModelParametersTab.tsx  ModelPredict.tsx  ModelsPillDisplay.tsx  (+43 more)
frontend/src/core/: HTTPError.ts  RoleSelector.ts  RoleSelector.tsx  api.ts  auth.tsx  colors.tsx  config.ts  context.ts  context.tsx  notifications.ts  router.tsx  useAppContext.tsx  useAsyncMemo.ts  useAuth.ts  useHistory.ts  useTimeout.tsx  utils.ts
frontend/src/pages/: AccountPage.tsx  BertopicPage.tsx  DocPage.tsx  ExperimentalPage.tsx  FinetunePage.tsx  HomePage.tsx  LoginPage.tsx  MonitorPage.tsx  NotFoundPage.tsx  ProjectCurationPage.tsx  ProjectExplorePage.tsx  ProjectExportPage.tsx  ProjectGenPage.tsx  ProjectModelPage.tsx  ProjectNewPage.tsx  ProjectPage.tsx  ProjectSettingsPage.tsx  ProjectTagPage.tsx  ProjectValidatePage.tsx  ProjectsPage.tsx  UsersPage.tsx
frontend/src/styles/: _annotations.scss  _codebook.scss  _data_table.scss  _example.scss  _explore.scss  (+10 more)
html/: welcome.html
tests/: test_project.py  test_train_bert.py
(+73 files in other folders)
