[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "activetigger"
authors = [{name = "Émilien Schultz - Julien Boelaert - Étienne Ollion", email = "emilien.schultz@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
"argparse",
"ipywidgets",
"IPython",
"requests",
"sqlite3",
"datasets",
"fasttext",
"numpy",
"pandas",
"pyarrow",
"scikit-learn",
"torch",
"torchvision",
"torchaudio",
"transformers[torch]",
"sentence_transformers",
"typing-inspect",
"typing_extensions",
"spacy",
"pyyaml",
"protobuf",
"fastapi[all]"]
