[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "activetigger"
authors = [{name = "Émilien Schultz - Julien Boelaert - Étienne Ollion", email = "emilien.schultz@ensae.fr"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">= 3.11,<3.14"
dependencies = [
		"fastapi[all]",
		"sentencepiece",
		"requests",
		"uvicorn",
		"argparse",
		"datasets",
		"fasttext @ git+https://github.com/facebookresearch/fastText.git@main",
		"ipywidgets",
		"pyyaml",
		"types-PyYAML",
		"IPython",
		"numpy",
		"pandas",
		"pyarrow",
		"torch==2.6.0",
		"transformers[torch]>=4.51.0",
		"sentence-transformers<=5.1.0",
		"typing-inspect",
		"typing-extensions",
		"spacy>=3.8",
		"pyyaml",
		"protobuf",
		"umap-learn",
		"distinctipy",
		"python-jose[cryptography]",
		"bcrypt",
		"plotly==6.0.1",
		"matplotlib",
		"scikit-learn",
		"loky",
		"einops",
		"accelerate>=1.13.0",
		"sacremoses>=0.1.1",
		"python-multipart>=0.0.22",
		"openai>=2.26.0",
		"sqlalchemy>=2.0.48",
		"python-slugify>=8.0.4",
		"psutil>=7.2.2",
		"openpyxl>=3.1.5",
		"ruff>=0.15.5",
		"black>=26.3.0",
		"mypy>=1.19.1",
		"types-python-jose>=3.5.0.20250531",
		"types-psutil>=7.2.2.20260130",
		"pandas-stubs>=3.0.0.260204",
		"psycopg2>=2.9.11",
		"python-dotenv>=1.2.2",
		"aiofiles>=25.1.0",
		"bertopic>=0.17.4",
		"hdbscan>=0.8.41",
		"simplemma>=1.1.2",
		"nbformat>=5.10.4",
		"great-tables>=0.21.0",
		"pytz>=2026.1.post1",
		"fr-core-news-sm",
		"en-core-web-sm",
		"setuptools",
		"nltk",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
#  "B",           # flake8-bugbear
  "I",           # isort
# that will be a problem for pytest fixture unless you swap with the usefixture decorator https://docs.pytest.org/en/7.1.x/how-to/fixtures.html#use-fixtures-in-classes-and-modules-with-usefixtures
#  "ARG",         # flake8-unused-arguments
#  "C4",          # flake8-comprehensions
#  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
#  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
#  "PIE",         # flake8-pie
#  "PL",          # pylint
#  "PTH",         # flake8-use-pathlib
#  "PT",          # flake8-pytest-style
#  "RET",         # flake8-return
#  "RUF",         # Ruff-specific
#  "SIM",         # flake8-simplify
#  "T20",         # flake8-print
#  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
#  "PYI",         # flake8-pyi
#  "S",           # flake8-bandit
]
ignore = [
#  "E501",     # E501 Line too long (158 > 100 characters)
#  "SIM105",   # SIM105 Use `contextlib.suppress(...)`
#  "PLR",      # Design related pylint codes
#  "S101",     # Use of `assert` detected
]
unfixable = [
  # Don't touch print statements
  "T201",
  # Don't touch noqa lines
  "RUF100",
]

[tool.mypy]
python_version = "3.11"
files = [
	"activetigger/db/*.py", # Add files each time one is cleaned
	"activetigger/generation/*.py",
	"activetigger/projections.py"
]
incremental = true

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.uv.sources]
fr-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0.tar.gz" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz" }
